--- a/html/milicia-valen.html
+++ b/html/milicia-valen.html
@@ -123,7 +123,7 @@
     </ul>
   </main>
   <footer>
-    <p>&copy; 2025 D&D Campaign Reference</p>
+  <p>&copy; 2025 D&D Campaign Reference — Ruleset: D&D 5e (2014 version)</p>
   </footer>
   <script src="../js/main.js"></script>
 </body>
