--- a/html/characters.html
+++ b/html/characters.html
@@ -91,7 +91,7 @@
     </section>
   </main>
   <footer>
-  <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
+  <p>&copy; 2025 D&D Campaign Reference — Ruleset: D&D 5e (2014 version)</p>
   </footer>
   <script src="../js/main.js"></script>
 </body>
