--- a/html/feren-dax.html
+++ b/html/feren-dax.html
@@ -109,7 +109,7 @@
     </ul>
   </main>
   <footer>
-    <p>&copy; 2025 D&D Campaign Reference</p>
+  <p>&copy; 2025 D&D Campaign Reference — Ruleset: D&D 5e (2014 version)</p>
   </footer>
   <script src="../js/main.js"></script>
 </body>
