--- a/html/lore-books.html
+++ b/html/lore-books.html
@@ -29,7 +29,7 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 D&D Campaign Reference</p>
+  <p>&copy; 2025 D&D Campaign Reference — Ruleset: D&D 5e (2014 version)</p>
   </footer>
   <script src="../js/main.js"></script>
 </body>
