Update house rules section

--- a/html/house-rules.html
+++ b/html/house-rules.html
@@ -26,6 +26,7 @@
     <section>
       <h2>Custom House Rules</h2>
       <!-- House rules content will go here -->
+       Test changing file. Add new rules and content for house rules here.
     </section>
   </main>
   <footer>
