Update Biggus Menethil's character sheet image and Milicia Valen's stats from XML

--- a/html/feren-dax.html
+++ b/html/feren-dax.html
@@ -23,7 +23,7 @@
     </nav>
   </header>
   <main>
-    <img src="../assets/images/Feren-Dax.png" alt="Feren Dax" width="192" height="192" style="float:left; margin-right:2rem; border-radius:8px;">
+  <img src="../assets/images/Feren-Dax.png" alt="Feren Dax" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px;">
     <h2>Details</h2>
     <ul>
   <li><strong>Played by:</strong> Will</li>
@@ -31,7 +31,9 @@
   <li><strong>Class(es):</strong> Warlock (level TBD) / Fighter (level TBD)</li>
   <li><strong>Background:</strong> Criminal</li>
   <li><strong>Patron:</strong> <a href="https://forgottenrealms.fandom.com/wiki/Alobal_Lorfiril" target="_blank">Alobal</a></li>
+  <li><a href="feren-dax-sheet.html" class="sheet-link">View Feren Dax's Character Sheet</a></li>
     </ul>
+    <div style="margin-bottom:4rem;"></div>
     <h2>Backstory</h2>
   <p>Feren Dax is a Tiefling Hexblade Warlock of <a href="https://forgottenrealms.fandom.com/wiki/Alobal_Lorfiril" target="_blank">Alobal</a>, born in Yusaf’hed, the city of pride and pleasure. Raised in the Silken Phoenix, a palace-brothel managed by his mother Velistra Dax, Feren received rigorous training in etiquette, swordplay, and politics. His best friend and sparring partner is Torri Spellguard. Feren’s true magical calling awakened alone, outside the influence of the Phoenix, through the mysterious deity <a href="https://forgottenrealms.fandom.com/wiki/Alobal_Lorfiril" target="_blank">Alobal</a>. He leaves Yusaf’hed as an adult, returning annually for brief visits. Feren presents as charming and elegant but is internally conflicted about his legacy and home. Birthday: Mirtul 8th.</p>
 
