--- a/html/milicia-valen.html
+++ b/html/milicia-valen.html
@@ -23,20 +23,17 @@
     </nav>
   </header>
   <main>
-    <img src="../assets/images/Milicia.png" alt="Milicia Valen" width="192" height="192" style="float:left; margin-right:2rem; border-radius:8px;">
+  <img src="../assets/images/Milicia.png" alt="Milicia Valen" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px;">
     <h2>Details</h2>
     <ul>
       <li><strong>Played by:</strong> Duwies</li>
       <li><strong>Species:</strong> Half-Orc</li>
       <li><strong>Class(es):</strong> Paladin (level TBD) / Cleric (level TBD)</li>
       <li><strong>Background:</strong> Gate Warden</li>
-      <li><strong>Dual Devotion:</strong>
-        <ul>
-          <li>Shaundakul (God of travel, exploration, portals)</li>
-          <li>Gruumsh (Orcish god of strength and conquest)</li>
-        </ul>
-      </li>
+      
+  <li><a href="milicia-valen-sheet.html" class="sheet-link">View Milicia's Character Sheet</a></li>
     </ul>
+    <div style="margin-bottom:4rem;"></div>
     <h2>Backstory</h2>
     <p>Milicia Valen is a Half-Orc torn between two worlds: the discipline and faith of a Paladin and the raw power and tradition of her orcish heritage. As a Gate Warden, she is responsible for protecting the boundaries between realms and ensuring the safety of travelers. Her dual devotion to Shaundakul and Gruumsh gives her a unique perspective, balancing mercy with might. Milicia is fiercely protective of her friends and will go to great lengths to uphold her oaths.</p>
 
