--- a/html/yo.html
+++ b/html/yo.html
@@ -23,14 +23,16 @@
     </nav>
   </header>
   <main>
-    <img src="../assets/images/Yo.png" alt="Yo" width="192" height="192" style="float:left; margin-right:2rem; border-radius:8px;">
+  <img src="../assets/images/Yo.png" alt="Yo" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px;">
     <h2>Details</h2>
     <ul>
       <li><strong>Played by:</strong> Ryan</li>
       <li><strong>Species:</strong> Halfling (Stout)</li>
       <li><strong>Class(es):</strong> Druid (level TBD) / Fighter (level TBD)</li>
       <li><strong>Background:</strong> Folk Hero</li>
+  <li><a href="yo-sheet.html" class="sheet-link">View Yo's Character Sheet</a></li>
     </ul>
+    <div style="margin-bottom:4rem;"></div>
     <h2>Backstory</h2>
     <p>N/A</p>
     <h2>Notable Abilities & Features</h2>
