--- a/html/biggus-menethil.html
+++ b/html/biggus-menethil.html
@@ -23,16 +23,18 @@
     </nav>
   </header>
   <main>
-    <img src="../assets/images/Biggus.png" alt="Biggus Menethil" width="192" height="192" style="float:left; margin-right:2rem; border-radius:8px;">
+  <img src="../assets/images/Biggus.png" alt="Biggus Menethil" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px;">
     <h2>Details</h2>
     <ul>
       <li><strong>Played by:</strong> Mike</li>
       <li><strong>Species:</strong> Human (Variant)</li>
       <li><strong>Class(es):</strong> Ranger (level TBD) / Rogue (level TBD)</li>
       <li><strong>Background:</strong> Rune Carver</li>
+  <li><a href="biggus-menethil-sheet.html" class="sheet-link">View Biggus's Character Sheet</a></li>
     </ul>
-  <h2>Backstory</h2>
-  <p>N/A</p>
+    <div style="margin-bottom:4rem;"></div>
+    <h2>Backstory</h2>
+    <p>Biggus Menethil is a resourceful and determined human, known for his keen senses and adaptability. As a Rune Carver, he has a mysterious connection to ancient magical runes, which he uses to aid his party. His dual training as a Ranger and Rogue makes him both a skilled tracker and a master of stealth. Biggus is loyal to his friends and has a strong sense of justice, though he is not above bending the rules to achieve his goals.</p>
     <h2>Notable Abilities & Features</h2>
     <ul>
       <li>Expert tracker and survivalist</li>
@@ -40,13 +42,17 @@
       <li>Rune Carving: Can inscribe magical runes for various effects</li>
       <li>Stealth and lockpicking skills from Rogue training</li>
     </ul>
-  <h2>Patron/Deity</h2>
-  <p>N/A</p>
-  <h2>Story Moments</h2>
-  <p>N/A</p>
+    <h2>Patron/Deity</h2>
+    <p>Biggus’s spiritual beliefs are private, but he respects the old ways and the power of ancient runes.</p>
+    <h2>Story Moments</h2>
+    <ul>
+      <li>Discovered a lost rune stone in the wilds</li>
+      <li>Saved the party from an ambush using clever traps</li>
+      <li>Negotiated a truce with a rival adventuring group</li>
+    </ul>
   </main>
   <footer>
-  <p>&copy; 2025 D&D Campaign Reference — Ruleset: D&D 5e (2014 version)</p>
+    <p>&copy; 2025 D&D Campaign Reference</p>
   </footer>
   <script src="../js/main.js"></script>
 </body>
