--- a/html/house-rules.html
+++ b/html/house-rules.html
@@ -24,12 +24,25 @@
   </header>
   <main>
     <section>
-      <h2>Custom House Rules</h2>
-      <!-- House rules content will go here -->
+      <h2>House Rules</h2>
+      <ul>
+        <li>Initiative Swapping</li>
+        <li>Birthday Wish</li>
+        <li>MTG Booster Pack Mechanic</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Cultural Lore</h2>
+      <ul>
+        <li>The Signet Code (Milicia’s culture)</li>
+      </ul>
     </section>
   </main>
   <footer>
-  <p>&copy; 2025 D&D Campaign Reference — Ruleset: D&D 5e (2014 version)</p>
+    <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
+    <p style="font-size:0.9em; color:#888; margin-top:0.5em;">
+      Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC. This is a fan site for personal use. All rights reserved.
+    </p>
   </footer>
   <script src="../js/main.js"></script>
 </body>
