--- a/html/important-npcs.html
+++ b/html/important-npcs.html
@@ -25,11 +25,20 @@
   <main>
     <section>
       <h2>Key NPCs</h2>
-      <!-- NPC list will go here -->
+      <ul>
+        <li>Headmaster Eldricus (The First One)</li>
+        <li>Velistra Dax (Feren’s mother)</li>
+        <li>Torri Spellguard (Feren’s childhood friend)</li>
+        <li>Niamh (avatar of Ceridwen)</li>
+        <li>Others as detailed in campaign</li>
+      </ul>
     </section>
   </main>
   <footer>
-  <p>&copy; 2025 D&D Campaign Reference — Ruleset: D&D 5e (2014 version)</p>
+    <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
+    <p style="font-size:0.9em; color:#888; margin-top:0.5em;">
+      Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC. This is a fan site for personal use. All rights reserved.
+    </p>
   </footer>
   <script src="../js/main.js"></script>
 </body>
