--- a/html/locations.html
+++ b/html/locations.html
@@ -29,7 +29,10 @@
     </section>
   </main>
   <footer>
-  <p>&copy; 2025 D&D Campaign Reference — Ruleset: D&D 5e (2014 version)</p>
+    <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
+    <p style="font-size:0.9em; color:#888; margin-top:0.5em;">
+      Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC. This is a fan site for personal use. All rights reserved.
+    </p>
   </footer>
   <script src="../js/main.js"></script>
 </body>
