Update house-rules.html to match revised HouseRules.md

--- a/html/house-rules.html
+++ b/html/house-rules.html
@@ -25,11 +25,10 @@
   <main>
     <section>
       <h2>House Rules</h2>
-      <ul>
-        <li>Initiative Swapping</li>
-        <li>Birthday Wish</li>
-        <li>MTG Booster Pack Mechanic</li>
-      </ul>
+        <ol>
+          <li><strong>Initiative Swapping</strong>: As a group of adventurers who have traveled together for some time, you are able to intelligently and tactically arrange your turn order among yourselves at the start of combat.</li>
+          <li><strong>Birthday Wish</strong>: Birthday wishes are special (at the DM's discretion). Mechanically, this means you may receive a boon or an uncommon-quality item, uniquely flavored to suit your character.</li>
+        </ol>
     </section>
     <section>
       <h2>Cultural Lore</h2>
