Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -1,35 +1,58 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>D&D Campaign Reference</title>
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="icon" href="assets/icons/favicon.ico">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>D&D Campaign Reference</title>
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="icon" href="assets/icons/favicon.ico">
 </head>
 <body>
-  <header>
-    <h1>D&D Campaign Reference</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="html/characters.html">Characters</a></li>
-        <li><a href="html/important-npcs.html">Important NPCs</a></li>
-        <li><a href="html/locations.html">Locations</a></li>
-        <li><a href="html/lore-books.html">Lore Books</a></li>
-        <li><a href="html/house-rules.html">House Rules</a></li>
-        <li><a href="html/organizations.html">Organizations</a></li>
-        <li><a href="html/session-notes.html">Session Notes</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <h2>Welcome to the campaign reference site!</h2>
-    <p>Explore the story, characters, lore, and more for your Dungeons & Dragons adventure.</p>
-  </main>
-  <footer>
-    <p>&copy; 2025 D&D Campaign Reference</p>
-  </footer>
-  <script src="js/main.js"></script>
+	<header>
+		<h1>Welcome to the D&D Campaign Reference</h1>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="html/characters.html">Characters</a></li>
+				<li><a href="html/important-npcs.html">Important NPCs</a></li>
+				<li><a href="html/locations.html">Locations</a></li>
+				<li><a href="html/lore-books.html">Lore Books</a></li>
+				<li><a href="html/house-rules.html">House Rules</a></li>
+				<li><a href="html/organizations.html">Organizations</a></li>
+				<li><a href="html/session-notes.html">Session Notes</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<section style="text-align:center; margin-top:2rem;">
+			<img src="assets/images/Biggus.png" alt="Campaign Art" width="180" height="180" style="border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,0.2); margin-bottom:1rem;">
+			<h2>Adventures Await!</h2>
+			<div style="max-width: 600px; margin: 0 auto; background: #f8f8f8; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); padding: 1.5rem 2rem; border: 1px solid #e0e0e0;">
+				<p style="margin: 0; text-align: justify;">
+					This site is your reference for the ongoing Dungeons & Dragons campaign set in the city of Yusaf'hed and beyond. Meet the current party: Biggus Menethil, Feren Dax, Milicia Valen, and Yo. Discover the stories of the Velvet Whisper Velistra Dax, the Mage-breaker Torri Spellguard, and more. Explore a world where beauty is a weapon, magic can be broken, and every character has a secret worth uncovering. Use the navigation above to meet the cast, learn the house rules, and dive into the evolving lore and session notes. Adventures, mysteries, and legends await, start exploring!
+				</p>
+			</div>
+		</section>
+		<section style="max-width:700px; margin:2rem auto;">
+			<h3 style="text-align:center;">Quick Links</h3>
+			<div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem; max-width:600px; margin:0 auto;">
+				<a class="character-card" href="html/characters.html" style="flex: 0 1 calc(29.1667% - 1rem); min-width:140px; text-align:center; display:flex; align-items:center; justify-content:center;">Characters</a>
+				<a class="character-card" href="html/important-npcs.html" style="flex: 0 1 calc(29.1667% - 1rem); min-width:140px; text-align:center; display:flex; align-items:center; justify-content:center;">Important NPCs</a>
+				<a class="character-card" href="html/locations.html" style="flex: 0 1 calc(29.1667% - 1rem); min-width:140px; text-align:center; display:flex; align-items:center; justify-content:center;">Locations</a>
+				<a class="character-card" href="html/lore-books.html" style="flex: 0 1 calc(29.1667% - 1rem); min-width:140px; text-align:center; display:flex; align-items:center; justify-content:center;">Lore Books</a>
+				<a class="character-card" href="html/house-rules.html" style="flex: 0 1 calc(29.1667% - 1rem); min-width:140px; text-align:center; display:flex; align-items:center; justify-content:center;">House Rules</a>
+				<a class="character-card" href="html/organizations.html" style="flex: 0 1 calc(29.1667% - 1rem); min-width:140px; text-align:center; display:flex; align-items:center; justify-content:center;">Organizations</a>
+				<a class="character-card" href="html/session-notes.html" style="flex: 0 1 calc(29.1667% - 1rem); min-width:140px; text-align:center; display:flex; align-items:center; justify-content:center;">Session Notes</a>
+			</div>
+		</section>
+	</main>
+		<footer>
+			<p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
+			<p style="font-size:0.9em; color:#888; margin-top:0.5em;">
+				Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC. This is a fan site for personal use. All rights reserved.
+			</p>
+		</footer>
+	<script src="js/main.js"></script>
 </body>
 </html>
