--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</header>
 	<main>
 		<section style="text-align:center; margin-top:2rem;">
-			<img src="assets/images/Biggus.png" alt="Campaign Art" width="180" height="180" style="border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,0.2); margin-bottom:1rem;">
+			<img src="assets/images/CoverArt.png" alt="Campaign Art" width="180" height="180" style="border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,0.2); margin-bottom:1rem;">
 			<h2>Adventures Await!</h2>
 			<div style="max-width: 600px; margin: 0 auto; background: #f8f8f8; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); padding: 1.5rem 2rem; border: 1px solid #e0e0e0;">
 				<p style="margin: 0; text-align: justify;">
